--- a/manga_web/templates/manga/manga_list.html
+++ b/manga_web/templates/manga/manga_list.html
@@ -1,26 +1,24 @@
 {% extends "base.html" %}
 {% block body %}
-  <div class="columns is-multiline">
+  <section class="section">
     {% for manga in mangas %}
-    <div class="column is-4">
-      <div class="card" style="height: 100%;">
-        <div class="card-image">
-          <figure class="image">
-            <img src="{{manga.image_src}}" alt="">
-          </figure>
-        </div>
-        <div class="card-content">
+      <div class="box">
+        <article class="media">
+          <div class="media-left">
+            <figure class="image is-128x128 is-1by1">
+              <img src="{{manga.image_src}}" alt="">
+            </figure>
+          </div>
           <div class="media-content">
-            <p class="title is-5"><a href="{{manga.slug}}">{{manga.name}}</a></p>
             <div class="content">
-              {{manga.description}}
+              <p class="title is-5"><a href="{% url "manga:detail" slug=manga.slug %}">{{manga.name}}</a></p>
+              <p>{{manga.description|truncatechars:420}}</p>
             </div>
           </div>
-        </div>
+        </article>
       </div>
-    </div>
     {% endfor %}
-  </div>
+  </section>
   {% if is_paginated %}
     <div class="columns">
       <div class="column is-10 is-offset-1">
