--- a/manga_web/templates/manga/manga_list.html
+++ b/manga_web/templates/manga/manga_list.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %}
 {% block body %}
   <section class="section">
+  <div class="container has-text-centered">
+    <h1 class="title is-3">
+      <span class="icon is-left has-text-danger"><i class="fas fa-book"></i></span> <span>Danh sách manga</span>
+    </h1>
+    <hr>
     {% for manga in mangas %}
-      <div class="box">
         <article class="media">
           <div class="media-left">
             <figure class="image is-128x128 is-1by1">
@@ -11,13 +15,15 @@
           </div>
           <div class="media-content">
             <div class="content">
-              <p class="title is-5"><a href="{% url "manga:detail" slug=manga.slug %}">{{manga.name}}</a></p>
-              <p>{{manga.description|truncatechars:420}}</p>
+              <p class="title is-4"><a href="{% url "manga:detail" slug=manga.slug %}">{{manga.name}}</a></p>
+              {% if manga.description %}
+                <p>{{manga.description|truncatechars:420}}</p>
+              {% endif %}
             </div>
           </div>
         </article>
-      </div>
     {% endfor %}
+    </div>
   </section>
   {% if is_paginated %}
     <div class="columns">
