Update pagination container

--- a/manga_web/templates/manga/manga_list.html
+++ b/manga_web/templates/manga/manga_list.html
@@ -25,6 +25,7 @@
     {% endfor %}
     </div>
   </section>
+<div class="container">
   {% if is_paginated %}
     <div class="columns">
       <div class="column is-10 is-offset-1">
@@ -64,4 +65,5 @@
       </div>
     </div>
   {% endif %}
+</div>
 {% endblock %}
