Update contact page

--- a/manga_web/templates/base.html
+++ b/manga_web/templates/base.html
@@ -2,9 +2,20 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
     <meta charset="utf-8">
     <title>Kindle Manga</title>
     <link rel="stylesheet" href="{% static "css/app.css" %}">
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" value="summary">
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="{% block meta_title %}{% endblock %}" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="{% block meta_url %}https://kindlemanga.xyz/{% endblock %}" />
+    <meta property="og:image" content="{% block meta_image %}{% endblock %}" />
+    <meta property="og:description" content="{% block meta_description %}{% endblock %}" />
   </head>
   <body>
     <div class="container">
@@ -33,15 +44,15 @@
             <a class="navbar-item" href="{% url 'manga:faq' %}">
               <span class="icon is-left has-text-success"><i class="fas fa-question"></i></span> <span>F.A.Q</span>
             </a>
-            <a class="navbar-item" href="{% url 'manga:contact' %}">
+            <a class="navbar-item" href="{% url 'contact_form' %}">
               <span class="icon is-left has-text-link"><i class="fas fa-envelope"></i></span> <span>Contact</span>
             </a>
             <div class="navbar-item">
               <a href="https://github.com/tudoanh/Kindlemanga" target="_blank" class="button is-info">
-                  <span class="icon has-text-white">
-                    <i class="fab fa-github"></i>
-                  </span>
-                  <span>Github</span>
+                <span class="icon has-text-white">
+                  <i class="fab fa-github"></i>
+                </span>
+                <span>Github</span>
               </a>
             </div>
           </div>
