--- a/manga_web/templates/manga/index.html
+++ b/manga_web/templates/manga/index.html
@@ -13,9 +13,9 @@
         </div>
         <div class="columns">
           <div class="column is-2-desktop is-offset-5-desktop has-text-centered">
-            <div class="button is-primary is-medium">
+            <button class="button is-primary is-medium" type="submit">
               <span class="icon is-left"><i class="fas fa-search"></i></span> <span>Tìm kiếm</span>
-            </div>
+            </button>
           </div>
         </div>
       </form>
