update SEO meta

--- a/manga_web/templates/base.html
+++ b/manga_web/templates/base.html
@@ -14,8 +14,8 @@
     <meta property="og:title" content="{% block meta_title %}{% endblock %}" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="{% block meta_url %}https://kindlemanga.xyz/{% endblock %}" />
-    <meta property="og:image" content="{% block meta_image %}{% endblock %}" />
-    <meta property="og:description" content="{% block meta_description %}{% endblock %}" />
+    <meta property="og:image" content="{% block meta_image %}https://i.imgur.com/yVthrKd.jpg{% endblock %}" />
+    <meta property="og:description" content="{% block meta_description %}Tải bộ truyện tranh yêu thích của bạn về Kindle và đọc mọi lúc mọi nơi. Hoàn toàn miễn phí.{% endblock %}" />
   </head>
   <body>
     <div class="container">
