Upload to Amazon S3 instead of Mediafire

--- a/manga_web/templates/manga/volume.html
+++ b/manga_web/templates/manga/volume.html
@@ -12,7 +12,7 @@
       <p>Hãy điền email của bạn vào form dưới đây và bấm Submit để nhận được thông báo khi chúng tôi convert xong.</p>
       <p>Để tránh server quá tải, xin vui lòng KHÔNG tạo quá 5 request liên tiếp trong vòng 1 tiếng.</p>
       <p>Sau khi convert, truyện sẽ được upload lên Mediafire và những người khác không cần phải yêu cầu convert lại nữa.</p>
-      <p>Nếu truyện bị lỗi hay link download bị lỗi, xin vui lòng liên hệ ở <a href="{% url 'manga:contact' %}">đây</a>.</p>
+      <p>Nếu truyện bị lỗi hay link download bị lỗi, xin vui lòng liên hệ ở <a href="{% url 'contact_form' %}">đây</a>.</p>
       <p>Nếu không thấy email trong vòng 15 phút, hãy cứ quay lại kiểm tra trên website. Rất có thể truyện của bạn đã được convert xong nhưng hệ thống mail của chúng tôi bị lỗi.</p>
     </div>
     <div class="columns">
