Update facebook comments

--- a/manga_web/templates/manga/manga_detail.html
+++ b/manga_web/templates/manga/manga_detail.html
@@ -24,6 +24,7 @@
               </div>
             </div>
           </div>
+          <div class="fb-comments" data-href="{{ request.build_absolute_uri }}" data-numposts="5"></div>
         </div>
         <div class="column">
           {% for vol in volume_list %}
@@ -54,4 +55,14 @@
         </div>
       </div>
     </div>
+{% endblock %}
+{% block extra_js %}
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.12&appId=1513993565587957&autoLogAppEvents=1';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 {% endblock %}
