--- a/manga_web/templates/manga/faq.html
+++ b/manga_web/templates/manga/faq.html
@@ -5,4 +5,22 @@
     <h1 class="title">F.A.Q - Những câu hỏi thường gặp</h1>
   </div>
 </section>
+<div class="container">
+  <div class="footer">
+    <ul>
+      <li>Bạn không tìm thấy truyện của mình?
+        <blockquote>
+        Vì kho dữ liệu của chúng tôi chưa được lớn nên còn nhiều truyện chưa được cập nhật. Bạn vui lòng để lại link truyện ở đây:<br>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScSFwyk3gxqTnKPWYBcOWlJU4mpelVcwM79K0uKRk1fk6esGA/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Đang tải...</iframe>
+        </blockquote>
+      </li>
+      <li>Bạn không thấy email thông báo sau 20 phút?
+      <blockquote>
+        Bạn vui lòng trang truyện bạn vừa yêu cầu và mục spam của email. Nếu vẫn chưa thấy truyện trên trang web, bạn vui lòng feedback lại cho chúng tôi ở đây:<br>
+        <a href="https://kindlemanga.xyz/contact/">Feedback</a>
+      </blockquote>
+      </li>
+    </ul>
+  </div>
+</div>
 {% endblock %}
