--- a/manga_web/templates/base.html
+++ b/manga_web/templates/base.html
@@ -54,6 +54,12 @@
                 </span>
                 <span>Github</span>
               </a>
+              <a href="https://www.facebook.com/KindleManga/" target="_blank" class="button is-info">
+                <span class="icon has-text-white">
+                  <i class="fa fa-facebook"></i>
+                </span>
+                <span>Fanpage</span>
+              </a>
             </div>
           </div>
         </div>
