update fanpage button

--- a/manga_web/templates/base.html
+++ b/manga_web/templates/base.html
@@ -48,18 +48,25 @@
               <span class="icon is-left has-text-link"><i class="fas fa-envelope"></i></span> <span>Contact</span>
             </a>
             <div class="navbar-item">
-              <a href="https://github.com/tudoanh/Kindlemanga" target="_blank" class="button is-info">
-                <span class="icon has-text-white">
-                  <i class="fab fa-github"></i>
-                </span>
-                <span>Github</span>
-              </a>
-              <a href="https://www.facebook.com/KindleManga/" target="_blank" class="button is-info">
-                <span class="icon has-text-white">
-                  <i class="fa fa-facebook"></i>
-                </span>
-                <span>Fanpage</span>
-              </a>
+              <div class="field is-grouped">
+                <p class="control">
+                  <a href="https://github.com/tudoanh/Kindlemanga" target="_blank"
+                                       class="button is-info">
+                                  <span class="icon has-text-white">
+                                    <i class="fab fa-github"></i>
+                                  </span>
+                  <span>Github</span>
+                  </a>
+                </p>
+                <p class="control">
+                  <a href="https://www.facebook.com/KindleManga/" target="_blank" class="button is-link">
+                    <span class="icon has-text-white">
+                      <i class="fab fa-facebook"></i>
+                    </span>
+                    <span>Fanpage</span>
+                  </a>
+                </p>
+              </div>
             </div>
           </div>
         </div>
