update some templates

--- a/manga_web/templates/base.html
+++ b/manga_web/templates/base.html
@@ -50,12 +50,11 @@
             <div class="navbar-item">
               <div class="field is-grouped">
                 <p class="control">
-                  <a href="https://github.com/tudoanh/Kindlemanga" target="_blank"
-                                       class="button is-info">
-                                  <span class="icon has-text-white">
-                                    <i class="fab fa-github"></i>
-                                  </span>
-                  <span>Github</span>
+                  <a href="https://github.com/tudoanh/Kindlemanga" target="_blank" class="button is-info">
+                    <span class="icon has-text-white">
+                      <i class="fab fa-github"></i>
+                    </span>
+                    <span>Github</span>
                   </a>
                 </p>
                 <p class="control">
