update title of templates

--- a/manga_web/templates/base.html
+++ b/manga_web/templates/base.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
     <meta charset="utf-8">
-    <title>Kindle Manga</title>
+    <title>{% block title %}Home{% endblock %} | Kindle Manga</title>
     <link rel="stylesheet" href="{% static "css/app.css" %}">
     <!-- Twitter Card data -->
     <meta name="twitter:card" value="summary">
