--- a/manga_web/templates/manga/manga_detail.html
+++ b/manga_web/templates/manga/manga_detail.html
@@ -2,6 +2,7 @@
 {% block meta_title %}{{ manga.name }} - {{ manga.total_chap }} chapters{% endblock %}
 {% block meta_url %}{{ request.build_absolute_uri }}{% endblock %}
 {% block meta_description %}{{ manga.description }}{% endblock %}
+{% block title %}{{ manga.name }}{% endblock %}
 {% block body %}
   <div class="section">
     <div class="container">
