--- a/manga_web/templates/manga/volume.html
+++ b/manga_web/templates/manga/volume.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load widget_tweaks %}
-
+{% block title %}Yêu cầu {{volume.manga.name}} - Tập {{volume.number}}{% endblock %}
 {% block body %}
 <section class="section">
   <div class="container">
