--- a/manga_web/templates/manga/manga_list.html
+++ b/manga_web/templates/manga/manga_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Page {{ page_obj.number }} - Danh sách manga{% endblock %}
 {% block body %}
   <section class="section">
   <div class="container has-text-centered">
