--- a/manga_web/templates/manga/search_result.html
+++ b/manga_web/templates/manga/search_result.html
@@ -1,4 +1,5 @@
 {% extends 'manga/manga_list.html' %}
+{% block title %}Tìm kiếm cho từ khóa "{{query}}"{% endblock %}
 {% block body %}
 <section class="section">
   <div class="container has-text-centered">
