--- a/manga_web/templates/manga/thanks.html
+++ b/manga_web/templates/manga/thanks.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Thank you!{% endblock %}
 {% block body %}
 <section class="section">
   <div class="container has-text-centered">
