--- a/manga_web/templates/manga/faq.html
+++ b/manga_web/templates/manga/faq.html
@@ -11,6 +11,13 @@
     <div class="column is-6">
       <div class="content">
         <ul>
+          <li>Một vol(tập) có bao nhiêu chap(chương)?
+            <article class="message is-success">
+              <div class="message-body">
+                <p>Theo câu trả lời ở <a href="https://www.reddit.com/r/manga/comments/2iq8vz/is_there_a_set_amount_of_chapters_per_volume/" target="_blank">bài viết này</a> thì mình đã chia mỗi volume gồm 12 chapter. Còn lẻ bao nhiêu chap thì sẽ cho vào vol cuối.</p>
+              </div>
+            </article>
+          </li>
           <li>Bạn không tìm thấy truyện của mình? Vui lòng để lại link truyện ở đây:
             <article class="message is-success">
               <div class="message-body">
