change domain name in vuejs code

--- a/manga_web/templates/manga/index.html
+++ b/manga_web/templates/manga/index.html
@@ -83,7 +83,7 @@
         },
         fetchKeywords(term) {
           if (term) {
-            axios.get('http://localhost:8000/ajax/search/?q=' + term)
+            axios.get('https://kindlemanga.xyz/ajax/search/?q=' + term)
             .then((response) => {
               this.results = response.data.results;
             })
