--- a/manga_web/templates/manga/search_result.html
+++ b/manga_web/templates/manga/search_result.html
@@ -26,39 +26,7 @@
     {% endfor %}
     </div>
   </section>
-<div class="container">
-  {% if is_paginated %}
-  <div class="columns">
-    <div class="column is-10 is-offset-1">
-      <nav class="pagination is-centered is-rounded" role="navigation" aria-label="pagination">
-        {% if page_obj.has_previous %}
-        <a href="?{% if job_type %}type={{job_type}}&{% endif %}{% if query %}q={{query}}&{% endif %}{% if city %}city={{city}}&{% endif %}page={{ page_obj.previous_page_number }}" class="pagination-previous">Previous</a>
-        {% else %}
-        <a class="pagination-previous" disabled>Previous</a>
-        {% endif %}
-        {% if page_obj.has_next %}
-        <a href="?{% if job_type %}type={{job_type}}&{% endif %}{% if query %}q={{query}}&{% endif %}{% if city %}city={{city}}&{% endif %}page={{ page_obj.next_page_number }}" class="pagination-next">Next page</a>
-        {% else %}
-        <a class="pagination-next" disabled>Next page</a>
-        {% endif %}
-        <ul class="pagination-list">
-          {% for i in paginator.page_range %}
-            {% if page_obj.number == i %}
-            <li>
-              <a href="" class="pagination-link is-current">{{ i }}</a>
-            </li>
-            {% else %}
-            <li>
-              <a href="?{% if job_type %}type={{job_type}}&{% endif %}{% if query %}q={{query}}&{% endif %}{% if city %}city={{city}}&{% endif %}page={{ i }}" class="pagination-link">{{ i }}</a>
-            </li>
-            {% endif %}
-          {% endfor %}
-        </ul>
-      </nav>
-    </div>
-  </div>
-  {% endif %}
-</div>
+{% include "manga/paginate.html" %}
 {% endblock %}
 
 {% block extra_js %}
