--- a/manga_web/templates/base.html
+++ b/manga_web/templates/base.html
@@ -16,6 +16,7 @@
     <meta property="og:url" content="{% block meta_url %}https://kindlemanga.xyz/{% endblock %}" />
     <meta property="og:image" content="{% block meta_image %}https://i.imgur.com/yVthrKd.jpg{% endblock %}" />
     <meta property="og:description" content="{% block meta_description %}Tải bộ truyện tranh yêu thích của bạn về Kindle và đọc mọi lúc mọi nơi. Hoàn toàn miễn phí.{% endblock %}" />
+    {% block extra_head %}{% endblock %}
   </head>
   <body>
     <div class="container">
