fix search pagination in templates

--- a/manga_web/templates/manga/search_result.html
+++ b/manga_web/templates/manga/search_result.html
@@ -1,4 +1,4 @@
-{% extends 'manga/manga_list.html' %}
+{% extends 'base.html' %}
 {% block title %}Tìm kiếm cho từ khóa "{{query}}"{% endblock %}
 {% block body %}
 <section class="section">
