--- a/manga_web/templates/manga/paginate.html
+++ b/manga_web/templates/manga/paginate.html
@@ -4,12 +4,12 @@
       <div class="column is-10 is-offset-1">
         <nav class="pagination is-centered" role="navigation" aria-label="pagination">
           {% if page_obj.has_previous %}
-          <a href="?page={{ page_obj.previous_page_number }}" class="pagination-previous">Previous</a>
+          <a href="?{% if query %}q={{query}}&{% endif %}page={{ page_obj.previous_page_number }}" class="pagination-previous">Previous</a>
           {% else %}
           <a class="pagination-previous" disabled>Previous</a>
           {% endif %}
           {% if page_obj.has_next %}
-          <a href="?page={{ page_obj.next_page_number }}" class="pagination-next">Next page</a>
+          <a href="?{% if query %}q={{query}}&{% endif %}page={{ page_obj.next_page_number }}" class="pagination-next">Next page</a>
           {% else %}
           <a class="pagination-next" disabled>Next page</a>
           {% endif %}
@@ -25,13 +25,13 @@
               </li>
               {% elif i > page_obj.number|add:'-2' and i < page_obj.number|add:'2' %}
               <li>
-                <a href="?page={{ i }}" class="pagination-link">{{ i }}</a>
+                <a href="?{% if query %}q={{query}}&{% endif %}page={{ i }}" class="pagination-link">{{ i }}</a>
               </li>
               {% endif %}
             {% endfor %}
             {% if page_obj.number < page_obj.paginator.num_pages|add:'-1' %}
               <li><span class="pagination-ellipsis">&hellip;</span></li>
-              <li><a href="?page={{page_obj.paginator.num_pages}}" class="pagination-link">{{ page_obj.paginator.num_pages }}</a></li>
+              <li><a href="?{% if query %}q={{query}}&{% endif %}page={{page_obj.paginator.num_pages}}" class="pagination-link">{{ page_obj.paginator.num_pages }}</a></li>
             {% endif %}
           </ul>
         </nav>
