Update to Fshare

--- a/manga_web/templates/manga/manga_detail.html
+++ b/manga_web/templates/manga/manga_detail.html
@@ -41,8 +41,8 @@
               <div class="content">
                 <span class="title is-5">Tập {{vol.number}}</span>
                 <br>
-                {% if vol.download_link %}
-                <a class="button is-primary" href="{{vol.download_link}}" target="_blank">
+                {% if vol.fshare_link %}
+                <a class="button is-primary" href="{{vol.fshare_link}}" target="_blank">
                   <span class="icon">
                     <i class="fas fa-toggle-on"></i>
                   </span>
