--- a/manga_web/templates/manga/index.html
+++ b/manga_web/templates/manga/index.html
@@ -16,7 +16,7 @@
                 @click="setResult(result)"
                 class="autocomplete-result">
                 {% verbatim %}
-                  {{ result.name }}
+                  {{ result.name }} - {{ result.source }}
                 {% endverbatim %}
               </li>
             </ul>
