--- a/manga_web/templates/manga/thanks.html
+++ b/manga_web/templates/manga/thanks.html
@@ -5,6 +5,9 @@
   <div class="container has-text-centered">
     <h1 class="title">Thank you!</h1>
     <h2 class="subtitle">Xin cảm ơn bạn đã sử dụng Kindle Manga. Vui lòng chờ 10 - 15 phút để truyện của bạn được convert thành công.</h2>
+    <figure>
+      <img src="https://i.imgur.com/O9G7q4I.gif" />
+    </figure>
   </div>
 </section>
 
